# ml_mental_health_analysis_nlp

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py  upload_s3.py
.github/workflows/: cicd.yml
deployment/: README.md  app.py  best_model.pkl  dockerfile  requirements.txt
monitor/: README.md  dockerfile  monitor_app.py  requirements.txt
notebook/: notebook.ipynb  pipe_model.pkl
notebook/.virtual_documents/: notebook.ipynb
pipelines/: training.py
src/: constants.py  utilities.py
src/ml_mental_health_analysis_nlp/: data_loader.py  data_transformation.py  model_evaluation.py  model_trainer.py
