[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"


[project]
requires-python = ">=3.10"
name = "ml-nlp-analysis"
readme = "README.md"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}


[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false